--- a/EasyLearn/Views/Home/Login.cshtml
+++ b/EasyLearn/Views/Home/Login.cshtml
@@ -112,7 +112,7 @@
                                             </div>
 
                                             <div class="mt-4 text-center">
-                                                <a asp-controller="Home" asp-action="ResetPassword" class="text-muted"><i class="mdi mdi-lock me-1"></i> Forgot your password?</a>
+                                                <a asp-controller="User" asp-action="ResetPasswordPage" class="text-muted"><i class="mdi mdi-lock me-1"></i> Forgot your password?</a>
                                             </div>
                                         </form>
                                     </div>
