fixed module creation

--- a/EasyLearn/Views/Admin/Index.cshtml
+++ b/EasyLearn/Views/Admin/Index.cshtml
@@ -53,7 +53,7 @@
                 <div class="d-flex">
                     <div class="flex-1 overflow-hidden">
                         <p class="text-truncate font-size-14 mb-2">Search User</p>
-                        <form asp-controller="Admin" asp-action="FindUser">
+                        <form asp-controller="User" asp-action="FindUser">
                             <input type="text" placeholder="Search for user.." name="emailOrname">
                             <button type="submit"><i class="fa fa-search"></i> Search</button>
                         </form>
