--- a/EasyLearn/Views/Module/GetCourseModulesByCourseInstructor.cshtml
+++ b/EasyLearn/Views/Module/GetCourseModulesByCourseInstructor.cshtml
@@ -47,7 +47,7 @@
                     @{
                         var serialNumber = 1;
                     }
-                    @if (Model.Status)
+                    @if (Model.Data != null)
                     {
                         @foreach (var item in Model.Data)
                         {
