--- a/EasyLearn/Views/Shared/_Instructorsidebar.cshtml
+++ b/EasyLearn/Views/Shared/_Instructorsidebar.cshtml
@@ -84,9 +84,9 @@
                         </a>
                         <ul class="sub-menu" aria-expanded="false">
                             <li><a asp-controller="Course" asp-action="CreateCourse">Add new course</a></li>
-                            <li><a asp-controller="Course" asp-action="GetAllCoursesByInstructorId">Active Course</a></li>
+                            <li><a asp-controller="Course" asp-action="GetActiveCoursesOfTheAuthInstructor">My active Courses</a></li>
 
-                            <li><a asp-controller="Course" asp-action="GetAllInActive">View all inactive instructors</a></li>
+                            <li><a asp-controller="Course" asp-action="GetAllInActive">My inactive courses</a></li>
 
 
                         </ul>
