--- a/EasyLearn/Views/Student/GetAllActiveStudent.cshtml
+++ b/EasyLearn/Views/Student/GetAllActiveStudent.cshtml
@@ -24,6 +24,7 @@
                         <th scope="col"></th>
                         <th scope="col"></th>
                         <th scope="col"></th>
+                        <th scope="col"></th>
                     </tr>
                 </thead>
                 <tbody>
@@ -48,7 +49,11 @@
                             </td>
 
                             <td>
-                                <a asp-action="ListOfBankDetail" asp-route-id="@item.Id" class="btn btn-info">Update</a>
+                                <a asp-controller="User" asp-action="UpgradeUser" asp-route-userId="@item.Email" class="btn btn-info">Update</a>
+                            </td>
+                            
+                            <td>
+                                <a asp-action="ListOfBankDetail" asp-route-id="@item.Id" class="btn btn-info">Bank</a>
                             </td>
 
                         </tr>
