--- a/EasyLearn/Views/User/ConfirmPasswordReset.cshtml
+++ b/EasyLearn/Views/User/ConfirmPasswordReset.cshtml
@@ -1,4 +1,6 @@
-﻿@{
+﻿@using EasyLearn.Models.DTOs.UserDTOs;
+@model UserResponseModel;
+@{
     ViewData["Title"] = "Recover Password";
     Layout = "~/Views/Shared/_BlankLayout.cshtml";
 }
@@ -26,18 +28,25 @@
 
                                     <div class="p-2 mt-5">
                                         <div class="alert alert-success mb-4" role="alert">
-                                            Enter your Email and instructions will be sent to you!
+                                            Enter new Password !
                                         </div>
-                                        <form class="" asp-controller="User" asp-action="ResetPassword">
+                                        <form class="" asp-controller="User" asp-action="UpdateUserPassword">
+                                            <input name="Id" value="@Model.Data.Id" type="hidden" />
 
                                             <div class="auth-form-group-custom mb-4">
                                                 <i class="ri-mail-line auti-custom-input-icon"></i>
-                                                <label for="useremail">Email</label>
-                                                <input type="email" class="form-control" id="useremail" name="email" placeholder="Enter email">
+                                                <label for="useremail">Password</label>
+                                                <input type="password" class="form-control" id="useremail" name="password" placeholder="Enter email">
+                                            </div>
+
+                                            <div class="auth-form-group-custom mb-4">
+                                                <i class="ri-mail-line auti-custom-input-icon"></i>
+                                                <label for="useremail">Confirm Password</label>
+                                                <input type="password" class="form-control" id="useremail" name="ConfirmPassword" placeholder="Enter email">
                                             </div>
 
                                             <div class="mt-4 text-center">
-                                                <input class="btn btn-primary w-md waves-effect waves-light" value="Reset" type="submit"/>
+                                                <input class="btn btn-primary w-md waves-effect waves-light" value="Reset" type="submit" />
                                             </div>
                                         </form>
                                     </div>
