--- a/EasyLearn/Views/User/FindUser.cshtml
+++ b/EasyLearn/Views/User/FindUser.cshtml
@@ -22,7 +22,7 @@
                         <th scope="col">Gender</th>
                         <th scope="col"></th>
                         <th scope="col"></th>
-                        <th scope="col"></th>
+                        @*<th scope="col"></th>*@
                     </tr>
                 </thead>
                 <tbody>
@@ -41,12 +41,12 @@
                             <td>
                             <a asp-action="Detail" asp-route-id="@item.Id" class="btn btn-success">Details</a>
                             </td>
-                            <td>
+                         @*   <td>
                                 <a asp-action="DeletePreview" asp-route-id="@item.Id" class="btn btn-danger">Delete</a>
-                            </td>
+                            </td>*@
 
                             <td>
-                                <a asp-controller="Admin" asp-action="UpgradeUser" asp-route-userId="@item.Id" class="btn btn-info">Upgrade</a>
+                                <a asp-controller="User" asp-action="UpgradeUser" asp-route-userId="@item.Id" class="btn btn-info">Upgrade</a>
                             </td>
 
                         </tr>
