--- a/EasyLearn/Views/User/UpgradeUser.cshtml
+++ b/EasyLearn/Views/User/UpgradeUser.cshtml
@@ -78,7 +78,7 @@
 
             <div class="card-body">
 
-                <form asp-controller="Admin" asp-action="UpgradeUser">
+                <form asp-controller="User" asp-action="UpgradeUser">
                     <ul class="list-group list-group-flush">
                         <li class="list-group-item d-flex justify-content-between align-items-center border-0 px-0 pb-0">
                             Previous Role
