adding video lentgh

--- a/EasyLearn/Views/Course/Index.cshtml
+++ b/EasyLearn/Views/Course/Index.cshtml
@@ -75,7 +75,7 @@
 
 
                                             <h6 class="font-weight-semibold mb-2">
-                                                <a asp-controller="Course" asp-action="Detail" asp-route-id="@item.Id" class="text-default mb-2" data-abc="true">@item.Title</a>
+                                                <a asp-controller="Course" asp-action="Detail" asp-route-courseId="@item.Id" class="text-default mb-2" data-abc="true">@item.Title</a>
                                             </h6>
                                             <a href="#" class="text-muted" data-abc="true">@item.CourseLanguage</a>
                                         </div>
