--- a/EasyLearn/Views/Course/Detail.cshtml
+++ b/EasyLearn/Views/Course/Detail.cshtml
@@ -36,6 +36,7 @@
                                     <i class="fas fa-star"></i>
                                 </div>
                                 <p class="small text-muted">Rated 4.0/5</p>
+                                <p class="small text-muted"> @Model.Data.NumbersOfEnrollment student's enrolled</p>
                             </div>
                         </div>
                     </div>
@@ -44,9 +45,12 @@
                         <p class="small fw-bold">Course Categories
                             @foreach (var item in @Model.Data.CategoriesName)
                             {
+                                <a asp-controller="Course" action="GetCoursesByCategoryId" asp-route-CategoryId="@item.Id">
+
                                 <span class="fw-bold">
-                                    @item ,
+                                    @item.Name,
                                 </span>
+                                </a>
                             } 
                             </p>
                         <div class="d-flex justify-content-between">
@@ -57,7 +61,7 @@
                     <hr class="my-0" />
                     <div class="card-body">
                         <div class="d-flex justify-content-between align-items-center pb-2 mb-1">
-                            <a asp-controller="Course" asp-action="index" asp-route-courseId="@Model.Data.Id" class="text-dark fw-bold">Cancel</a>
+                            <a asp-controller="Course" asp-action="index" class="text-dark fw-bold">Cancel</a>
                             @*<a asp-controller="Enrolment" asp-action="Create" asp-route-courseId="@Model.Data.Id" class="text-dark fw-bold">Cancel</a>*@
                             <a asp-controller="Enrolment" asp-action="Create" asp-route-courseId="@Model.Data.Id" class="btn btn-primary"> Buy now </a>
                         </div>
