Fixed courses trying video tiem out

--- a/EasyLearn/Views/Course/GetAllUnVerifiedCourse.cshtml
+++ b/EasyLearn/Views/Course/GetAllUnVerifiedCourse.cshtml
@@ -67,8 +67,12 @@
                                     <td>@item.CreatedOn.ToShortTimeString()</td>
 
                                     <td id="tooltip-container1">
-                                        <a href="javascript:void(0);" class="me-3 text-primary" data-bs-container="#tooltip-container1" data-bs-toggle="tooltip" data-bs-placement="top" title="Edit"><i class="mdi mdi-pencil font-size-18"></i></a>
-                                        <a href="javascript:void(0);" class="text-danger" data-bs-container="#tooltip-container1" data-bs-toggle="tooltip" data-bs-placement="top" title="Delete"><i class="mdi mdi-trash-can font-size-18"></i></a>
+                                        <a asp-controller="Course" asp-action="ApproveCourse" asp-route-courseId="@item.Id" class="me-3 text-primary" data-bs-container="#tooltip-container1" data-bs-toggle="tooltip" data-bs-placement="top" title="Approve"><i class="mdi mdi-pencil font-size-18"></i></a>
+                                        <a asp-controller="Course" asp-action="RejectCourse" asp-route-courseId="@item.Id" class="me-3 text-primary" data-bs-container="#tooltip-container1" data-bs-toggle="tooltip" data-bs-placement="top" title="Reject"><i class="mdi mdi-pencil font-size-18"></i></a>
+
+                                        <a asp-controller="Course" asp-action="InspectCourse" asp-route-courseId="@item.Id" class="me-3 text-primary" data-bs-container="#tooltip-container1" data-bs-toggle="tooltip" data-bs-placement="top" title="Inspect"><i class="mdi mdi-pencil font-size-18"></i></a>
+
+                                        <a asp-controller="Course" asp-action="DeletePreview" asp-route-courseId="@item.Id" class="text-danger" data-bs-container="#tooltip-container1" data-bs-toggle="tooltip" data-bs-placement="top" title="Delete"><i class="mdi mdi-trash-can font-size-18"></i></a>
                                     </td>
                                 </tr>
                                 @(serialNumber++)
@@ -85,6 +89,7 @@
 <!-- end row -->
 <!-- JAVASCRIPT -->
 <script src="~/assets/libs/datatables.net/js/jquery.dataTables.min.js"></script>
+
 @*<script src="~/assets/libs/jquery/jquery.min.js"></script>
 <script src="~/assets/libs/bootstrap/js/bootstrap.bundle.min.js"></script>
 <script src="~/assets/libs/metismenu/metisMenu.min.js"></script>
