--- a/EasyLearn/Views/Module/Create.cshtml
+++ b/EasyLearn/Views/Module/Create.cshtml
@@ -1,4 +1,5 @@
-﻿@model EasyLearn.Models.DTOs.ModulesDTOs.CreateModuleRequestModel
+﻿@using EasyLearn.Models.DTOs.ModuleDTOs;
+@model CreateModuleRequestModel
 
 <partial name="_Notification" />
 
