--- a/EasyLearn/Views/Course/GetAllInActive.cshtml
+++ b/EasyLearn/Views/Course/GetAllInActive.cshtml
@@ -1,9 +1,105 @@
 ﻿@model EasyLearn.Models.DTOs.CourseDTOs.CoursesResponseModel
 
 @{
+    ViewBag.Title = "Customers";
+    ViewBag.pTitle = "Customers";
+    ViewBag.pageTitle = "Ecommerce";
+    Layout = "~/Views/Shared/_Layout.cshtml";
+}
+
+<!-- DataTables -->
+<link href="~/assets/libs/datatables.net-bs4/css/dataTables.bootstrap4.min.css" rel="stylesheet" type="text/css" />
+
+<!-- Responsive datatable examples -->
+<link href="~/assets/libs/datatables.net-responsive-bs4/css/responsive.bootstrap4.min.css" rel="stylesheet" type="text/css" />
+
+<div class="row">
+    <div class="col-lg-12">
+        <div class="card">
+            <div class="card-body">
+                @*
+                <div>
+
+                <a asp-controller="Moderator" asp-action="RegisterModerator" class="btn btn-success mb-2"><i class="mdi mdi-plus me-2"></i> </a>
+                </div>
+                *@
+                <div class="table-responsive mt-3">
+                    <table class="table table-centered datatable dt-responsive nowrap " style="border-collapse: collapse; border-spacing: 0; width: 100%;">
+                        <thead class="thead-light">
+                            <tr>
+                                <th style="width: 20px;">
+                                    <div class="form-check">
+                                        <input type="checkbox" class="form-check-input" id="customercheck">
+                                        <label class="form-check-label mb-0" for="customercheck">&nbsp;</label>
+                                    </div>
+                                </th>
+                                <th>#</th>
+                                <th>Title</th>
+                                <th>Language</th>
+                                <th>Price</th>
+                                <th>Time</th>
+                                <th>Created On</th>
+                                <th style="width: 120px;">Action</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+
+                            @{
+                                var serialNumber = 1;
+                            }
+
+                            @foreach (var item in Model.Data)
+                            {
+                                <tr>
+                                    <td>
+                                        <div class="form-check">
+                                            <input type="checkbox" class="form-check-input" id="customercheck1">
+                                            <label class="form-check-label mb-0" for="customercheck1">&nbsp;</label>
+                                        </div>
+                                    </td>
+
+                                    <td> @serialNumber</td>
+
+                                    <td>@item.Title</td>
+                                    <td>@item.CourseLanguage</td>
+                                    <td>@item.Price</td>
+                                    <td>@item.CreatedOn.ToShortDateString()</td>
+                                    <td>@item.CreatedOn.ToShortTimeString()</td>
+
+                                    <td id="tooltip-container1">
+                                        <a asp-controller="Course" asp-action="ApproveCourse" asp-route-courseId="@item.Id" class="me-3 text-primary" data-bs-container="#tooltip-container1" data-bs-toggle="tooltip" data-bs-placement="top" title="Approve"><i class="mdi mdi-pencil font-size-18"></i></a>
+                                        <a asp-controller="Course" asp-action="RejectCourse" asp-route-courseId="@item.Id" class="me-3 text-primary" data-bs-container="#tooltip-container1" data-bs-toggle="tooltip" data-bs-placement="top" title="Reject"><i class="mdi mdi-pencil font-size-18"></i></a>
+
+                                        <a asp-controller="Course" asp-action="InspectCourse" asp-route-courseId="@item.Id" class="me-3 text-primary" data-bs-container="#tooltip-container1" data-bs-toggle="tooltip" data-bs-placement="top" title="Inspect"><i class="mdi mdi-pencil font-size-18"></i></a>
+
+                                        <a asp-controller="Course" asp-action="DeletePreview" asp-route-courseId="@item.Id" class="text-danger" data-bs-container="#tooltip-container1" data-bs-toggle="tooltip" data-bs-placement="top" title="Delete"><i class="mdi mdi-trash-can font-size-18"></i></a>
+                                    </td>
+                                </tr>
+                                @(serialNumber++)
+                                ;
+                            }
+
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<!-- end row -->
+<!-- JAVASCRIPT -->
+<script src="~/assets/libs/datatables.net/js/jquery.dataTables.min.js"></script>
+
+
+
+
+@{
+    /*
+@model EasyLearn.Models.DTOs.CourseDTOs.CoursesResponseModel
+
     //ViewBag.Title = "title";
     Layout = "_Layout";
-}
+
 <div class="row">
     <div class="col-sm-11">
         <h2>
@@ -68,3 +164,5 @@
 
     </div>
 </div>
+*/
+}
