--- a/EasyLearn/Views/Module/GetAll.cshtml
+++ b/EasyLearn/Views/Module/GetAll.cshtml
@@ -1,4 +1,5 @@
-﻿@model EasyLearn.Models.DTOs.ModulesDTOs.ModulesResponseModel
+﻿@using EasyLearn.Models.DTOs.ModuleDTOs;
+@model ModulesResponseModel
 
 @{
     //ViewBag.Title = "title";
