--- a/EasyLearn/Views/Module/GetCourseModulesByCourseInstructor.cshtml
+++ b/EasyLearn/Views/Module/GetCourseModulesByCourseInstructor.cshtml
@@ -1,5 +1,6 @@
-﻿@model EasyLearn.Models.DTOs.ModulesDTOs.ModulesResponseModel
+﻿@model ModulesResponseModel
 @using System.Security.Claims;
+@using EasyLearn.Models.DTOs.ModuleDTOs;
 
 @{
     var userRole = User.FindFirstValue(ClaimTypes.Role);
