--- a/EasyLearn/Views/Course/Index.cshtml
+++ b/EasyLearn/Views/Course/Index.cshtml
@@ -79,7 +79,7 @@
                                             </h6>
                                             <a href="#" class="text-muted" data-abc="true">@item.CourseLanguage</a>
                                         </div>
-                                        <h3 class="mb-0 font-weight-semibold">&#x20A6;@item.Price</h3>
+                                        <h3 class="mb-0 font-weight-semibold">&#x20A6;@Html.DisplayFor(x => item.Price)</h3>
                                         <div>
                                             <i class="fa fa-star star"></i>
                                             <i class="fa fa-star star"></i>
