--- a/EasyLearn/Views/Module/GetCourseModulesByCourseInstructor.cshtml
+++ b/EasyLearn/Views/Module/GetCourseModulesByCourseInstructor.cshtml
@@ -64,7 +64,7 @@
                                 <td>@item.VideoPath</td>
                                 <td>@item.CourseId</td>
                                 <td>
-                                    <a asp-action="GetById" asp-route-id="@item.Id" class="btn btn-success">Details</a>
+                                    <a asp-action="GetByVideoSequesnce" asp-route-videoSequence="@item.VideoSequence" class="btn btn-success">Details</a>
                                 </td>
                                 <td>
                                     <a asp-action="DeletePreview" asp-route-id="@item.Id" class="btn btn-danger">Delete</a>
