--- a/EasyLearn/Views/Shared/_Instructorsidebar.cshtml
+++ b/EasyLearn/Views/Shared/_Instructorsidebar.cshtml
@@ -86,7 +86,8 @@
                             <li><a asp-controller="Course" asp-action="CreateCourse">Add new course</a></li>
                             <li><a asp-controller="Course" asp-action="GetActiveCoursesOfTheAuthInstructor">My active Courses</a></li>
 
-                            <li><a asp-controller="Course" asp-action="GetAllInActive">My inactive courses</a></li>
+                            <li><a asp-controller="Course" asp-action="GetAllUnverifiedCoursesOfAuthInstructor">Unverified courses</a></li>
+                            <li><a asp-controller="Course" asp-action="GetAllInActiveCoursesOfAuthInstructor">My inactive courses</a></li>
 
 
                         </ul>
