--- a/EasyLearn/Views/Course/GetAllCoursesByInstructorId.cshtml
+++ b/EasyLearn/Views/Course/GetAllCoursesByInstructorId.cshtml
@@ -58,7 +58,7 @@
 
                                     <td>@item.Title</td>
                                     <td>@item.CourseLanguage</td>
-                                    <td>@item.Price</td>
+                                    <td>@Html.DisplayFor(x => @item.Price)</td>
                                     <td>@item.DifficultyLevel</td>
 
                                     @*https://localhost:7143/Module/GetAllByCourseId?courseId=28aa95ff-6f08-4fae-8d38-6681a38fee4f*@ 
